@@ -1,3 +1,8 @@
+2008-04-18  Martin Lambers <marlam@marlam.de>
+
+	* cvl/cvl_gl.c: Save both modelview and projection matrix in
+	cvl_gl_state_save().
+
 2008-04-14  Martin Lambers <marlam@marlam.de>
 
 	* cvl/cvl_intern.c: Use GL_CLAMP_TO_EDGE instead of GL_CLAMP for all
